# ChangeLog for net-misc/ssvnc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/ssvnc/ChangeLog,v 1.16 2010/12/28 17:47:36 vapier Exp $

*ssvnc-1.0.28 (28 Dec 2010)

  28 Dec 2010; Mike Frysinger <vapier@gentoo.org> +ssvnc-1.0.28.ebuild:
  Version bump.

*ssvnc-1.0.27 (19 Jul 2010)

  19 Jul 2010; Mike Frysinger <vapier@gentoo.org> +ssvnc-1.0.27.ebuild,
  +files/ssvnc-1.0.27-build.patch:
  Version bump.

  19 Jul 2010; Mike Frysinger <vapier@gentoo.org> ssvnc-1.0.26.ebuild:
  Stabilize for amd64/x86.

  19 Jul 2010; Mike Frysinger <vapier@gentoo.org> ssvnc-1.0.26.ebuild:
  Require xterm since ssvnc uses it indirectly #327511 by Nikita S.
  Kipriyanov.

  19 Apr 2010; Mike Frysinger <vapier@gentoo.org> +ssvnc-1.0.26.ebuild,
  +files/ssvnc-1.0.26-build.patch:
  Version bump.

*ssvnc-1.0.26 (19 Apr 2010)

  19 Apr 2010; Mike Frysinger <vapier@gentoo.org> +ssvnc-1.0.26.ebuild,
  +files/ssvnc-1.0.26-build.patch:
  Version bump.

  19 Apr 2010; Mike Frysinger <vapier@gentoo.org> ssvnc-1.0.25.ebuild:
  Mark amd64/x86 stable.

  10 Jan 2010; Mike Frysinger <vapier@gentoo.org> files/Makefile.vncviewer:
  Add more build flags from old imake #299890 by Marcel Pennewiß.

  07 Jan 2010; Mike Frysinger <vapier@gentoo.org> ssvnc-1.0.22.ebuild,
  ssvnc-1.0.24.ebuild, ssvnc-1.0.25.ebuild:
  Fix by Marcel Pennewiß for sed error when USE=-java #299888.

*ssvnc-1.0.25 (05 Jan 2010)

  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> +ssvnc-1.0.25.ebuild,
  +files/ssvnc-1.0.25-build.patch:
  Version bump #299721 by Marcel Pennewiß.

  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> ssvnc-1.0.24.ebuild:
  Mark amd64/x86 stable.

*ssvnc-1.0.24 (04 Dec 2009)

  04 Dec 2009; Mike Frysinger <vapier@gentoo.org> +ssvnc-1.0.24.ebuild,
  +files/ssvnc-1.0.24-build.patch, +files/ssvnc-1.0.24-optional-java.patch,
  +files/Makefile.libvncauth, +files/Makefile.vncviewer:
  Version bump and avoid imake #289407 by Dmitri Pogosian.
