@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX Makefile.libvncauth 140 RMD160 0425ac4232c4f00cea2105465de5cc61678950bd SHA1 bc22f1ef95669ae3abf5d160b40283d402869e32 SHA256 323eb71d93404499b1234e152db9b4af4e02ee04590f49c8a09a2c910ea521d4
 AUX Makefile.vncviewer 295 RMD160 34a9c185e51bb747b8d84c15843c475c1338b5d9 SHA1 dc0e615e65905619b1500898f408eed110185bc4 SHA256 7793e2e7855373a2ce255d603e1e13c47668db0cf24bc0cfed3d3f851abb24e6
 AUX ssvnc-1.0.26-build.patch 1849 RMD160 d9f10d857b4839a71204cac5bfe30dd3e493f6c0 SHA1 f926123888e69fd9a37ec7b57fa2bbe0f8be90b2 SHA256 72cc943d504c843cd6681ab39be47facd0afb89621cbdfa0374be6c62c48fec7
@@ -6,7 +9,14 @@ DIST ssvnc-1.0.26.src.tar.gz 527442 RMD160 ce9f1d115e64a04d758f86e70a5b3fe0d9391
 DIST ssvnc-1.0.27.src.tar.gz 542282 RMD160 a78fdceac1f0738ca13dd815fd8dc30c80debe2e SHA1 a5819186f9c05adc53c4ad258f1147003c17829e SHA256 1cce07e272075e68a779dcc7cb9dd7e178d6f3fd92f65ab94a74e1b896f9f643
 DIST ssvnc-1.0.28.src.tar.gz 542796 RMD160 210f2c5c68a6aafe2050175e141b1f8afe63a9c6 SHA1 2750c6ef4b3bb9d11687978f8981dc35b92f4f6b SHA256 a4244e81f3e3f2778af1e04d8953576133bb66607d6f3c1457a07594b94c1de1
 EBUILD ssvnc-1.0.26.ebuild 1449 RMD160 beddd627e3b0f60db9ab6685a0085aeb71a31f9b SHA1 642e255adae6b19e9ed081e79b2a8b349918674e SHA256 daeba3330a058c141dc33308829c67098a6cfd6e6016e9c9c3bc0820e17eea72
-EBUILD ssvnc-1.0.27.ebuild 1451 RMD160 c5e8da18cd119e7450369c0726ad0e054ff95e3f SHA1 0d728ed6082e5657f15882b69a14028efd26f8ff SHA256 5a0cc83170e34177fd1d51c59fe1869545fe6ef33e06a4af6a508690fa0c77da
+EBUILD ssvnc-1.0.27.ebuild 1452 RMD160 c16f3b7fd093ca45ac3907e7f7c9174e7164c8e8 SHA1 f4b9f368a4dde7b77bbc08309594d98bbe771e69 SHA256 20f98eed3e7973e3b5b02f57ffa25fc8a273fa12dffdb7e05f4fd89ff73d8a84
 EBUILD ssvnc-1.0.28.ebuild 1451 RMD160 583dbf2bc84cabdac342c41f354846b6e32b6226 SHA1 8b5b4d6c491179c5ee1473582324b7a2d522998a SHA256 30a123ddadffad107342bf76114d7f4d82ccd2fe0b6622b07169fd7a71d94feb
-MISC ChangeLog 2551 RMD160 5e420861d0b99e6d0fe89b57a94ea7a1314cf21c SHA1 f89c6065c162ff547e4cd170045183496ba45298 SHA256 5edc1e2b39111a81215930d18f6102f99f592d6cd018a09941d78a84d26b8d5b
+MISC ChangeLog 2662 RMD160 543faf9f0661a2b1af7762aa6b1fa5d91afa7d5a SHA1 b63116a59fe5c705cd62bca31aa527f221385e3a SHA256 757f7c80edf9249bf4ebec6e301f7c94bc673fc2213d49a10ced7cdb4f19c1dc
 MISC metadata.xml 221 RMD160 2699c0059639536eb7befa077a27e437569a26ba SHA1 4bef3741184af2e2d984fec094cd0ab39ae2e624 SHA256 1d72b91d3ef79fdff0049c23a645d8595a5fb72ea7e5d5b6fa43cfc18e9a4627
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAk0fhY4ACgkQ9/cejkQaxBD0MQCbB+tnfH+czGS5V1zwqfsXzD54
+w7oAnjv4r5S0dUfE/tkL0aXcVnX1jGIB
+=5qJx
+-----END PGP SIGNATURE-----
